--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
  <div class="question-section">
     <h1>Coding Quiz Challenge</h1>
     <p class="quiz-description">Try to answer the following code-related questions within the time limit.<br />
-    Keep in mind that incorrect answers will penaltize your score/time by 10 seconds!</p>
+    Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
     <button class="start-button">Start quiz</button>
  </div>
-
-
  </main>
  <script src="./assets/js/script.js"></script>
 </body>
